# alphamind

./: .env.example  .gitignore  README.md  docker-compose.yml  otel-collector-config.yaml
backend/: Dockerfile  pyproject.toml
backend/config/: agents.yaml
backend/src/trading_sim/: __init__.py  config.py  main.py  settings.py  telemetry.py
backend/src/trading_sim/agents/: __init__.py  trading_agent.py
backend/src/trading_sim/api/: routes.py  schemas.py
backend/src/trading_sim/db/: engine.py  tables.py
backend/src/trading_sim/models/: __init__.py  market.py  portfolio.py  results.py  trades.py
backend/src/trading_sim/simulation/: __init__.py  executor.py  market_data.py  metrics.py  runner.py  storage.py
backend/src/trading_sim/strategies/: __init__.py  prompts.py
frontend/: index.html  package.json
frontend/src/: App.tsx
frontend/src/components/: Layout.tsx
frontend/src/components/ui/: card.tsx
frontend/src/hooks/: useApi.ts
frontend/src/lib/: api.ts
frontend/src/pages/: AgentsPage.tsx  Dashboard.tsx  SimulatePage.tsx  SimulationDetail.tsx  SimulationsPage.tsx
